--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "Stalkint Bot",
+  "name": "stalkintbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sadican Üstün",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sadicann/stalkintbot.git"
+  },
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sadicann/stalkintbot/issues"
+  },
+  "homepage": "https://github.com/sadicann/stalkintbot#readme",
   "dependencies": {
-    "axios": "^0.19.2",
-    "get-urls": "^9.2.0",
     "he": "^1.2.0",
     "node-html-parser": "^1.2.16",
     "request": "^2.88.2",
     "telegraf": "^3.38.0",
-    "telegraf-command-parts": "^1.0.3",
-    "telegraf-inline-menu": "^4.0.1"
+    "telegraf-command-parts": "^1.0.3"
   }
 }
